updated rdio group description

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -321,7 +321,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
 
     <section>
       <h3 id="kbd_label_4">Radio Group (Text Alignment)</h3>
-      <p>The group of text alignment buttons look and act like standard toggle buttons, but since only one of the three options can be active they behave like a group of radio buttons and this behavior needs to be communicated to users of assistive technologies.   To communicate this behavior to assitive technologies the buttons use the <a href="../../#radiobutton">radio group design pattern</a> with the <code>radiogroup</code> and <code>radio</code> roles.  When the radio group pattern is within a toolbar its keyboard support is slightly different than a traditional radio group.  The selected item (e.g. checked) does not change when keyboard focus moves between radio buttons, the selected button only changes with the use of the <kbd>space</kbd> or <kbd>enter</kbd> key.</p>
+      <p>The group of text alignment buttons look and act like standard toggle buttons, but since only one of the three options can be selected (e.g. checked) they behave like a group of radio buttons and this behavior needs to be communicated to users of assistive technologies.   To communicate this behavior to assitive technologies the buttons use the <a href="../../#radiobutton">radio group design pattern</a> with the <code>radiogroup</code> and <code>radio</code> roles.  When the radio group pattern is within a toolbar its keyboard support is slightly different than a traditional radio group.  The selected item (e.g. checked) does not change when keyboard focus moves between radio buttons, the selected button only changes with the use of the <kbd>space</kbd> or <kbd>enter</kbd> key.</p>
       <table aria-labelledby="kbd_label_4" class="def">
         <thead>
           <tr>
@@ -709,6 +709,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
 
     <section>
       <h3 id="rps2_label">Radio Group (Text Alignment)</h3>
+      <p>The group of text alignment buttons look and act like standard toggle buttons, but since only one of the three options can be selected (e.g. checked) they behave like a group of radio buttons and this behavior needs to be communicated to users of assistive technologies.   To communicate this behavior to assitive technologies the buttons use the <a href="../../#radiobutton">radio group design pattern</a> with the <code>radiogroup</code> and <code>radio</code> roles.  When the radio group pattern is within a toolbar its keyboard support is slightly different than a traditional radio group.  The selected item (e.g. checked) does not change when keyboard focus moves between radio buttons, the selected button only changes with the use of the <kbd>space</kbd> or <kbd>enter</kbd> key.</p>
       <table aria-labelledby="rps2_label rps_label" class="data attributes">
         <thead>
           <tr>
