updated regression test id

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -594,7 +594,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
                 Provides a reference to the <code>textarea</code> that the toolbar controls.
             </td>
           </tr>
-          <tr data-test-id="toolbar-role">
+          <tr >
             <th scope="row"><code>button</code>, <code>spinbutton</code>, <code>checkbox</code>, <code>link</code></th>
             <td></td>
             <td><code>button</code>, <code>div</code>, <code>input[type=<q>checkbox</q>]</code>, <code>a</code></td>
@@ -605,7 +605,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
               </ul>
             </td>
           </tr>
-          <tr data-test-id="toolbaritem-tabindex">
+          <tr data-test-id="toolbar-item-tabindex">
             <td></td>
             <th scope="row">
               <code>tabindex=<q>-1</q></code>
