--- a/examples/index.html
+++ b/examples/index.html
@@ -36,7 +36,7 @@
   
     <tr>
       <td><code>banner</code></td>
-      <td><a href="http://localhost/GitHub/aria-practices/examples/landmarks/banner.html">Banner Landmark</a></td>
+      <td><a href="../examples/landmarks/banner.html">Banner Landmark</a></td>
     </tr>
   
     <tr>
@@ -67,12 +67,12 @@
   
     <tr>
       <td><code>complementary</code></td>
-      <td><a href="http://localhost/GitHub/aria-practices/examples/landmarks/complementary.html">Complementary Landmark</a></td>
+      <td><a href="../examples/landmarks/complementary.html">Complementary Landmark</a></td>
     </tr>
   
     <tr>
       <td><code>contentinfo</code></td>
-      <td><a href="http://localhost/GitHub/aria-practices/examples/landmarks/contentinfo.html">Contentinfo Landmark</a></td>
+      <td><a href="../examples/landmarks/contentinfo.html">Contentinfo Landmark</a></td>
     </tr>
   
     <tr>
@@ -82,7 +82,7 @@
   
     <tr>
       <td><code>form</code></td>
-      <td><a href="http://localhost/GitHub/aria-practices/examples/landmarks/form.html">Form Landmark</a></td>
+      <td><a href="../examples/landmarks/form.html">Form Landmark</a></td>
     </tr>
   
     <tr>
@@ -123,7 +123,7 @@
   
     <tr>
       <td><code>main</code></td>
-      <td><a href="http://localhost/GitHub/aria-practices/examples/landmarks/main.html">Main Landmark</a></td>
+      <td><a href="../examples/landmarks/main.html">Main Landmark</a></td>
     </tr>
   
     <tr>
@@ -159,7 +159,7 @@
   
     <tr>
       <td><code>navigation</code></td>
-      <td><a href="http://localhost/GitHub/aria-practices/examples/landmarks/navigation.html">Navigation Landmark</a></td>
+      <td><a href="../examples/landmarks/navigation.html">Navigation Landmark</a></td>
     </tr>
   
     <tr>
@@ -184,7 +184,7 @@
   
     <tr>
       <td><code>region</code></td>
-      <td><a href="http://localhost/GitHub/aria-practices/examples/landmarks/region.html">Region Landmark</a></td>
+      <td><a href="../examples/landmarks/region.html">Region Landmark</a></td>
     </tr>
   
     <tr>
@@ -201,7 +201,7 @@
   
     <tr>
       <td><code>search</code></td>
-      <td><a href="http://localhost/GitHub/aria-practices/examples/landmarks/search.html">Search Landmark</a></td>
+      <td><a href="../examples/landmarks/search.html">Search Landmark</a></td>
     </tr>
   
     <tr>
@@ -447,12 +447,12 @@
 <li><a href="../examples//treeview/treeview-1/treeview-1b.html">File Directory Treeview  Using Declared Properties </a></li>
 <li><a href="../examples//treeview/treeview-2/treeview-2a.html">Navigation Treeview  Using Computed Properties </a></li>
 <li><a href="../examples//treeview/treeview-2/treeview-2b.html">Navigation Treeview  Using Declared Properties </a></li>
-<li><a href="http://localhost/GitHub/aria-practices/examples/landmarks/complementary.html">Complementary Landmark</a></li>
-<li><a href="http://localhost/GitHub/aria-practices/examples/landmarks/form.html">Form Landmark</a></li>
-<li><a href="http://localhost/GitHub/aria-practices/examples/landmarks/main.html">Main Landmark</a></li>
-<li><a href="http://localhost/GitHub/aria-practices/examples/landmarks/navigation.html">Navigation Landmark</a></li>
-<li><a href="http://localhost/GitHub/aria-practices/examples/landmarks/region.html">Region Landmark</a></li>
-<li><a href="http://localhost/GitHub/aria-practices/examples/landmarks/search.html">Search Landmark</a></li></ul></td>
+<li><a href="../examples/landmarks/complementary.html">Complementary Landmark</a></li>
+<li><a href="../examples/landmarks/form.html">Form Landmark</a></li>
+<li><a href="../examples/landmarks/main.html">Main Landmark</a></li>
+<li><a href="../examples/landmarks/navigation.html">Navigation Landmark</a></li>
+<li><a href="../examples/landmarks/region.html">Region Landmark</a></li>
+<li><a href="../examples/landmarks/search.html">Search Landmark</a></li></ul></td>
     </tr>
   
     <tr>
