--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -299,9 +299,9 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
     </section>
 
     <section>
-      <h3 id="kbd_label_4">Radio Group (Text Alignment)</h3>
+      <h3 id="kbd_label_3">Radio Group (Text Alignment)</h3>
       <p>The group of text alignment buttons look and act like standard toggle buttons, but since only one of the three options can be selected (e.g. checked) they behave like a group of radio buttons and this behavior needs to be communicated to users of assistive technologies.   To communicate this behavior to assitive technologies the buttons use the <a href="../../#radiobutton">radio group design pattern</a> with the <code>radiogroup</code> and <code>radio</code> roles.  When the radio group pattern is within a toolbar its keyboard support is slightly different than a traditional radio group.  The selected item (e.g. checked) does not change when keyboard focus moves between radio buttons, the selected button only changes with the use of the <kbd>space</kbd> or <kbd>enter</kbd> key.</p>
-      <table aria-labelledby="kbd_label_4" class="def">
+      <table aria-labelledby="kbd_label_3" class="def">
         <thead>
           <tr>
             <th>Key</th>
@@ -356,9 +356,9 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
     </section>
 
     <section>
-      <h3 id="kbd_label_3">Button (Cut, Copy and Paste)</h3>
-      <p>The cut, copy and paste button in the toolbar.</p>
-      <table aria-labelledby="kbd_label_3" class="def">
+      <h3 id="kbd_label_4">Button (Cut, Copy and Paste)</h3>
+      <p>NOTE: The <code>aria-disabled</code> attribute is used instead of the DOM <code>.disabled</code> property of the <code>button</code> element to identify the button as disabled.  By using <code>aria-disabled</code> the button can receive keyboard focus and be part of the navigation of the toolbar when it's functionality is enabled or disabled.</p>
+      <table aria-labelledby="kbd_label_4" class="def">
         <thead>
           <tr>
             <th>Key</th>
@@ -708,9 +708,9 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
 
 
     <section>
-      <h3 id="rps2_label">Radio Group (Text Alignment)</h3>
+      <h3 id="rps3_label">Radio Group (Text Alignment)</h3>
       <p>The group of text alignment buttons look and act like standard toggle buttons, but since only one of the three options can be selected (e.g. checked) they behave like a group of radio buttons and this behavior needs to be communicated to users of assistive technologies.   To communicate this behavior to assitive technologies the buttons use the <a href="../../#radiobutton">radio group design pattern</a> with the <code>radiogroup</code> and <code>radio</code> roles.  When the radio group pattern is within a toolbar its keyboard support is slightly different than a traditional radio group.  The selected item (e.g. checked) does not change when keyboard focus moves between radio buttons, the selected button only changes with the use of the <kbd>space</kbd> or <kbd>enter</kbd> key.</p>
-      <table aria-labelledby="rps2_label rps_label" class="data attributes">
+      <table aria-labelledby="rps3_label rps_label" class="data attributes">
         <thead>
           <tr>
             <th scope="col">Role</th>
@@ -784,8 +784,9 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
     </section>
 
     <section>
-      <h3 id="rps2_label">Button (Cut, Copy and Paste)</h3>
-      <table aria-labelledby="rps2_label rps_label" class="data attributes">
+      <h3 id="rps4_label">Button (Cut, Copy and Paste)</h3>
+      <p>NOTE: The <code>aria-disabled</code> attribute is used instead of the DOM <code>.disabled</code> property of the <code>button</code> element to identify the button as disabled.  By using <code>aria-disabled</code> the button can receive keyboard focus and be part of the navigation of the toolbar when it's functionality is enabled or disabled.</p>
+      <table aria-labelledby="rps4_label rps_label" class="data attributes">
         <thead>
           <tr>
             <th scope="col">Role</th>
@@ -831,8 +832,8 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
 
 
     <section>
-      <h3 id="rps1_label">Menu Button (Font Family)</h3>
-      <table aria-labelledby="rps1_label rps_label" class="data attributes">
+      <h3 id="rps5_label">Menu Button (Font Family)</h3>
+      <table aria-labelledby="rps5_label rps_label" class="data attributes">
         <thead>
           <tr>
             <th scope="col">Role</th>
@@ -916,8 +917,8 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
     </section>
 
     <section>
-      <h3 id="rps2_label">Menu (Font Family)</h3>
-      <table aria-labelledby="rps2_label rps_label" class="data attributes">
+      <h3 id="rps6_label">Menu (Font Family)</h3>
+      <table aria-labelledby="rps6_label rps_label" class="data attributes">
         <thead>
           <tr>
             <th scope="col">Role</th>
@@ -994,8 +995,8 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
 
 
     <section>
-      <h3 id="rps3_label">Spin Button (Font Size)</h3>
-      <table aria-labelledby="rps3_label rps_label" class="data attributes">
+      <h3 id="rps7_label">Spin Button (Font Size)</h3>
+      <table aria-labelledby="rps7_label rps_label" class="data attributes">
         <thead>
           <tr>
             <th scope="col">Role</th>
