added tabindex=-1 to spinbutton

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -152,6 +152,7 @@
           <div class="group">
             <div  class="item spinbutton"
                   role="spinbutton"
+                  tabindex="-1"
                   aria-valuenow="14"
                   aria-valuetext="14pt"
                   aria-valuemin="8"
