fixed validation bugs

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -504,7 +504,6 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
         </tbody>
       </table>
     </section>
-  </section>
 
     <section>
       <h3 id="kbd_label_8">Checkbox (Night Mode)</h3>
@@ -547,6 +546,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
         </tbody>
       </table>
     </section>
+
   </section>
 
   <section>
@@ -707,7 +707,6 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
       </table>
     </section>
 
-
     <section>
       <h3 id="rps3_label">Radio Group (Text Alignment)</h3>
       <p>The group of text alignment buttons look and act like standard toggle buttons, but since only one of the three options can be selected (e.g. checked) they behave like a group of radio buttons and this behavior needs to be communicated to users of assistive technologies.   To communicate this behavior to assitive technologies the buttons use the <a href="../../#radiobutton">radio group design pattern</a> with the <code>radiogroup</code> and <code>radio</code> roles.  When the radio group pattern is within a toolbar its keyboard support is slightly different than a traditional radio group.  The selected item (e.g. checked) does not change when keyboard focus moves between radio buttons, the selected button only changes with the use of the <kbd>space</kbd> or <kbd>enter</kbd> key.</p>
@@ -831,7 +830,6 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
       </table>
     </section>
 
-
     <section>
       <h3 id="rps5_label">Menu Button (Font Family)</h3>
       <table aria-labelledby="rps5_label rps_label" class="data attributes">
@@ -869,6 +867,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
               <ul>
                 <li>Defines the accessible name for the menu button, by contacting <q>Font: </q> with the current font family name checked in the menu.</li>
                 <li>The accessible name is updated when a different font is selected from the font menu.</li>
+              </ul>
             </td>
           </tr>
           <tr>
@@ -994,7 +993,6 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
       </table>
     </section>
 
-
     <section>
       <h3 id="rps7_label">Spin Button (Font Size)</h3>
       <table aria-labelledby="rps7_label rps_label" class="data attributes">
@@ -1038,7 +1036,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
               <code>div</code>
             </td>
             <td>
-              Identifies the current size of the font as an integer value.</q>.
+              Identifies the current size of the font as an integer value.
             </td>
           </tr>
           <tr>
@@ -1050,7 +1048,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
               <code>div</code>
             </td>
             <td>
-              Identifies the current size of the font as string <q>NN points</q>.</q>.
+              Identifies the current size of the font as string <q>NN points</q>.
             </td>
           </tr>
           <tr>
@@ -1062,7 +1060,7 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
               <code>div</code>
             </td>
             <td>
-              Identifies the maximum size of the font.</q>.
+              Identifies the maximum size of the font.
             </td>
           </tr>
           <tr>
@@ -1074,13 +1072,12 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
               <code>div</code>
             </td>
             <td>
-              Identifies the minimum size of the font.</q>.
+              Identifies the minimum size of the font.
             </td>
           </tr>
         </tbody>
       </table>
     </section>
-
 
   </section>
 
