fixed liter problems and added two initial regression tests for each example

--- a/examples/carousel/carousel-1/carousel-1.html
+++ b/examples/carousel/carousel-1/carousel-1.html
@@ -238,6 +238,7 @@
               </tr>
             </thead>
             <tbody>
+              <tr>
                 <th><kbd>Tab</kbd></th>
                 <td>
                   The button becomes visible when it receives keyboard focus.
@@ -309,7 +310,7 @@
                   </ul>
                 </td>
               </tr>
-              <tr>
+              <tr data-test-id="landmark-aria-label">
                 <td></td>
                 <th scope="row">
                   <code>aria-label=<q>Image Carousel</q></code>
@@ -350,7 +351,7 @@
                   </ul>
                 </td>
               </tr>
-              <tr>
+              <tr data-test-id="pause-aria-pressed">
                 <td></td>
                 <th scope="row">
                   <code>aria-pressed=<q>false</q></code>
@@ -434,7 +435,7 @@
             </tbody>
           </table>
         </section>
-      <section>
+      </section>
 
       <section>
         <h2>Javascript and CSS Source Code</h2>
