--- a/examples/radio/radio-2/radio-2.html
+++ b/examples/radio/radio-2/radio-2.html
@@ -131,7 +131,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr data-test-id="key-tab">
               <th><kbd>Tab</kbd></th>
               <td>
                 <ul>
@@ -140,7 +140,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-space">
               <th><kbd>Space</kbd></th>
               <td>
                 <ul>
@@ -150,7 +150,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-right-arrow">
               <th><kbd>Right arrow</kbd></th>
               <td>
                 <ul>
@@ -160,7 +160,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-down-arrow">
               <th><kbd>Down arrow</kbd></th>
               <td>
                 <ul>
@@ -170,7 +170,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-left-arrow">
               <th><kbd>Left arrow</kbd></th>
               <td>
                 <ul>
@@ -180,7 +180,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-up-arrow">
               <th><kbd>Up arrow</kbd></th>
               <td>
                 <ul>
@@ -206,19 +206,19 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr data-test-id="radiogroup-role">
               <th scope="row"><code>radiogroup</code></th>
               <td></td>
               <td><code>ul</code></td>
               <td>Identifies the element as a container for a group of <code>radio</code> buttons.</td>
             </tr>
-            <tr>
+            <tr data-test-id="radiogroup-aria-labelledby">
               <td></td>
               <th scope="row"><code>aria-labelledby="[IDREF]"</code></th>
               <td><code>ul</code></td>
               <td>Refers to the element that contains the label of the radio group.</td>
             </tr>
-            <tr>
+            <tr data-test-id="radiogroup-tabindex">
               <td></td>
               <th scope="row"><code>tabindex=&quot;0&quot;</code></th>
               <td><code>ul</code></td>
@@ -229,7 +229,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="radiogroup-aria-activedescendant">
               <td></td>
               <th scope="row"><code>aria-activedescendant=&quot;[IDREF]&quot;</code></th>
               <td><code>ul</code></td>
@@ -245,7 +245,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="radio-role">
               <th scope="row"><code>radio</code></th>
               <td></td>
               <td><code>li</code></td>
@@ -256,7 +256,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="radio-aria-checked">
               <td></td>
               <th scope="row"><code>aria-checked="false"</code></th>
               <td><code>li</code></td>
@@ -268,7 +268,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="radio-aria-checked">
               <td></td>
               <th scope="row"><code>aria-checked="true"</code></th>
               <td><code>li</code></td>
