--- a/examples/index.html
+++ b/examples/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-  <title>Index of ARIA Examples</title>
+  <title>Index of ARIA Design Pattern Examples | WAI-ARIA Authoring Practices 1.1</title>
   <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
   <link rel="stylesheet" href="css/core.css">
   <script src="js/examples.js"></script>
@@ -16,7 +16,7 @@
   </nav>
 
   <main>
-    <h1>Index of ARIA Examples</h1>
+    <h1>Index of ARIA Design Pattern Examples</h1>
 
     <section id="examples_by_roles">
 
@@ -97,7 +97,9 @@
   <td><code>menu</code></td>
   <td>    <ul>      <li><a href="../examples//menu-button/menu-button-actions-active-descendant.html">Actions Menu Button  Using aria-activedescendant </a></li>
       <li><a href="../examples//menu-button/menu-button-actions.html">Actions Menu Button  Using element.focus() </a></li>
-      <li><a href="../examples//menu-button/menu-button-links.html">Navigation Menu Button  </a></li></ul></td>
+      <li><a href="../examples//menu-button/menu-button-links.html">Navigation Menu Button  </a></li>
+      <li><a href="../examples//menubar/menubar-1/menubar-1.html">Navigation Menubar  </a></li>
+      <li><a href="../examples//menubar/menubar-2/menubar-2.html">Editor Menubar  </a></li></ul></td>
 </tr><tr>
   <td><code>menubar</code></td>
   <td>    <ul>      <li><a href="../examples//menubar/menubar-1/menubar-1.html">Navigation Menubar  </a></li>
@@ -128,6 +130,10 @@
       <li><a href="../examples//combobox/aria1.0pattern/combobox-autocomplete-none.html">Legacy ARIA 1.0 Combobox without Autocomplete  </a></li>
       <li><a href="../examples//combobox/aria1.1pattern/listbox-combo.html">ARIA 1.1 Combobox with Listbox Popup  </a></li></ul></td>
 </tr><tr>
+  <td><code>radio</code></td>
+  <td>    <ul>      <li><a href="../examples//radio/radio-1/radio-1.html">Radio Group  Using Roving tabindex </a></li>
+      <li><a href="../examples//radio/radio-2/radio-2.html">Radio Group  Using aria-activedescendant </a></li></ul></td>
+</tr><tr>
   <td><code>radiogroup</code></td>
   <td>    <ul>      <li><a href="../examples//radio/radio-1/radio-1.html">Radio Group  Using Roving tabindex </a></li>
       <li><a href="../examples//radio/radio-2/radio-2.html">Radio Group  Using aria-activedescendant </a></li></ul></td>
@@ -138,6 +144,7 @@
   <td><code>row</code></td>
   <td>    <ul>      <li><a href="../examples//combobox/aria1.1pattern/grid-combo.html">ARIA 1.1 Combobox with Grid Popup  </a></li>
       <li><a href="../examples//grid/LayoutGrids.html">Layout Grid  </a></li>
+      <li><a href="../examples//table/table.html">Table  </a></li>
       <li><a href="../examples//treegrid/treegrid-1.html">Treegrid Email Inbox  </a></li></ul></td>
 </tr><tr>
   <td><code>rowgroup</code></td>
@@ -153,6 +160,10 @@
   <td>    <ul>      <li><a href="../examples//slider/multithumb-slider.html">Horizontal Multi-Thumb Slider  </a></li>
       <li><a href="../examples//slider/slider-1.html">Horizontal Slider  </a></li>
       <li><a href="../examples//slider/slider-2.html">Slider  with aria-orientation and aria-valuetext </a></li></ul></td>
+</tr><tr>
+  <td><code>tab</code></td>
+  <td>    <ul>      <li><a href="../examples//tabs/tabs-1/tabs.html"> Tabs with Automatic Activation </a></li>
+      <li><a href="../examples//tabs/tabs-2/tabs.html"> Tabs with Manual Activation </a></li></ul></td>
 </tr><tr>
   <td><code>table</code></td>
   <td>    <a href="../examples//table/table.html">Table  </a></td>
