--- a/examples/index.html
+++ b/examples/index.html
@@ -11,12 +11,17 @@
   <script src="js/app.js"></script>
 </head>
 <body>
-  <nav>
+  <nav aria-label="Top link to ARIA Practices">
     <a href="../">WAI-ARIA Authoring Practices 1.1</a>
   </nav>
 
   <main>
     <h1>Index of ARIA Design Pattern Examples</h1>
+
+    <ul>
+      <li><a href="#examples_by_role_label">Examples by Role</a></li>
+      <li><a href="#examples_by_props_label">Examples by Properties and States</a></li>
+    </ul>
 
     <section id="examples_by_roles">
 
@@ -446,7 +451,7 @@
     </section>
 
   </main>
-  <nav>
+  <nav aria-label="Bottom link to ARIA Practices">
     <a href="../">WAI-ARIA Authoring Practices 1.1</a>
   </nav>
 </body>
