added tovingTabIndex test

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -173,8 +173,8 @@
           </div>
 
           <div class="group">
-            <label class="input"><input class="item nightmode" type="checkbox" tabindex="-1"> Night Mode</label>
-            <a class="item link" href="help.html" tabindex="-1" title="Opens help document in a new window">Help</a>
+            <label class="input"><input id="checkbox" class="item nightmode" type="checkbox" tabindex="-1"> Night Mode</label>
+            <a id="link" class="item link" href="help.html" tabindex="-1" title="Opens help document in a new window">Help</a>
           </div>
       </div>
       <label for="textarea1" class="hidden">Text Sample</label><br>
