--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -15,7 +15,7 @@
 
 <link href="css/datepicker.css" rel="stylesheet">
 <script src="js/dateInput.js" type="text/javascript"></script>
-<script src="js/datePickerDay.js" type="text/javascript"></script>
+<script src="js/datepickerDay.js" type="text/javascript"></script>
 <script src="js/datepicker.js" type="text/javascript"></script>
 </head>
 <body>
